@@ -4,6 +4,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.annotation.EnableCaching;
 import org.springframework.cache.support.NoOpCacheManager;
@@ -25,8 +26,9 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 
-@Import({ CacheConfiguration.class })
+@Import({CacheConfiguration.class})
 @ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
 @EnableCaching
 class CacheConfigurationTest {
 
@@ -53,7 +55,7 @@ class CacheConfigurationTest {
     @DynamicPropertySource
     static void redisProperties(DynamicPropertyRegistry registry) {
         registry.add("spring.data.redis.url", () ->
-            String.format("redis://localhost:%d", redis.getMappedPort(6379))
+            "redis://localhost:%d".formatted(redis.getMappedPort(6379))
         );
         registry.add("spring.data.redis.encryption.key", () -> TEST_ENCRYPTION_KEY);
     }
